[package]
name = "secure-messaging-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Real Kyber768 implementation via liboqs
liboqs-sys = "0.7.2"

# AES encryption
aes = "0.8.3"
aes-gcm = "0.10.3"

# Random number generation
rand = "0.8.5"
rand_core = "0.6.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Base64 encoding
base64 = "0.21.0"

# Logging
env_logger = "0.10.0"
log = "0.4"

# User input
rustyline = "12.0"

# Cryptographic primitives
sha2 = "0.10.6"
hmac = "0.12.1"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
